recursion.hanoi.SplitHanoi2.scala.error
Erreur de compilation :
SplitHanoi2:26: error: Unmatched closing brace '}' ignored here
  } 
  ^